@@ -1,8 +1,8 @@
 package com.github.yoep.popcorn.ui.view.services;
 
-import com.github.yoep.popcorn.backend.media.filters.model.Season;
-import com.github.yoep.popcorn.backend.media.providers.Episode;
-import com.github.yoep.popcorn.backend.media.providers.ShowDetails;
+import com.github.yoep.popcorn.backend.media.Episode;
+import com.github.yoep.popcorn.backend.media.ShowDetails;
+import com.github.yoep.popcorn.backend.media.Season;
 import com.github.yoep.popcorn.backend.media.watched.WatchedService;
 import com.github.yoep.popcorn.backend.utils.LocaleText;
 import com.github.yoep.popcorn.ui.messages.DetailsMessage;
@@ -10,10 +10,8 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -36,7 +34,7 @@ public class ShowHelperService {
         Objects.requireNonNull(media, "media cannot be null");
         var seasons = new ArrayList<Season>();
 
-        for (int i = 1; i <= media.getNumberOfSeasons(); i++) {
+        for (int i = 1; i <= media.proto().getNumberOfSeasons(); i++) {
             seasons.add(new Season(i, localeText.get(DetailsMessage.SEASON, i)));
         }
 
@@ -56,8 +54,8 @@ public class ShowHelperService {
 
         return media.getEpisodes().stream()
                 .filter(Objects::nonNull)
-                .filter(e -> e.getSeason() == season.getSeason())
-                .sorted(Comparator.comparing(Episode::getEpisode))
+                .filter(e -> e.season() == season.season())
+                .sorted(Comparator.comparing(Episode::episode))
                 .collect(Collectors.toList());
     }
 
@@ -68,43 +66,84 @@ public class ShowHelperService {
      * @param media   The media of the seasons.
      * @return Returns the unwatched season or last season if all seasons have been watched.
      */
-    public Season getUnwatchedSeason(List<Season> seasons, ShowDetails media) {
+    public CompletableFuture<Season> getUnwatchedSeason(List<Season> seasons, ShowDetails media) {
         Objects.requireNonNull(seasons, "seasons cannot be null");
         Objects.requireNonNull(media, "media cannot be null");
+        var sortedSeasons = seasons.stream().sorted().toList();
+        List<CompletableFuture<EnhancedSeason>> seasonFutures = sortedSeasons.stream()
+                .map(season -> isSeasonWatched(season, media))
+                .toList();
 
-        return seasons.stream()
-                .sorted()
-                .filter(e -> !isSeasonWatched(e, media))
-                .findFirst()
-                .orElseGet(() -> seasons.get(seasons.size() - 1));
+        return CompletableFuture.allOf(seasonFutures.toArray(new CompletableFuture[0]))
+                .thenApply(v -> seasonFutures.stream().map(CompletableFuture::join)
+                        .filter(e -> !e.isWatched)
+                        .findFirst()
+                        .map(EnhancedSeason::season)
+                        .orElse(sortedSeasons.getLast()));
     }
 
     /**
      * Get the first unwatched episode from the episodes list.
      *
      * @param episodes The episodes list to select from.
-     * @param season
+     * @param season   The season to retrieve the first unwatched episode of.
      * @return Returns the first unwatched episode, or the last episode if all episodes have been watched.
      */
-    public Episode getUnwatchedEpisode(List<Episode> episodes, Season season) {
+    public CompletableFuture<Optional<Episode>> getUnwatchedEpisode(List<Episode> episodes, Season season) {
         Objects.requireNonNull(episodes, "episodes cannot be null");
-
-        return episodes.stream()
+        var filteredEpisodes = episodes.stream()
                 .sorted()
                 .filter(Objects::nonNull)
-                .filter(e -> e.getSeason() == season.getSeason())
-                .filter(e -> !watchedService.isWatched(e))
-                .findFirst()
-                .orElseGet(() -> episodes.get(0));
+                .filter(e -> e.season() == season.season())
+                .toList();
+
+        List<CompletableFuture<EnhancedEpisode>> futures = filteredEpisodes.stream()
+                .map(episode -> watchedService.isWatched(episode)
+                        .thenApply(isWatched -> new EnhancedEpisode(episode, isWatched)))
+                .toList();
+
+        return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
+                .thenApply(v -> futures.stream()
+                        .map(CompletableFuture::join)
+                        .filter(e -> !e.isWatched())
+                        .findFirst()
+                        .map(EnhancedEpisode::episode)
+                        .or(() -> firstEpisode(filteredEpisodes)))
+                .exceptionally(ex -> {
+                    log.warn("Failed to retrieve watched state of episodes", ex);
+                    return firstEpisode(filteredEpisodes);
+                });
+    }
+
+    private static Optional<Episode> firstEpisode(List<Episode> episodes) {
+        return episodes.stream()
+                .sorted()
+                .findFirst();
     }
 
     //endregion
 
     //region Functions
 
-    private boolean isSeasonWatched(Season season, ShowDetails media) {
-        return getSeasonEpisodes(season, media).stream()
-                .allMatch(watchedService::isWatched);
+    private CompletableFuture<EnhancedSeason> isSeasonWatched(Season season, ShowDetails media) {
+        List<CompletableFuture<Boolean>> episodeWatchStatuses = getSeasonEpisodes(season, media).stream()
+                .map(watchedService::isWatched)
+                .toList();
+
+        return CompletableFuture
+                .allOf(episodeWatchStatuses.toArray(new CompletableFuture[0]))
+                .thenApply(v -> {
+                    var isWatched = episodeWatchStatuses.stream()
+                            .allMatch(CompletableFuture::join);
+
+                    return new EnhancedSeason(season, isWatched);
+                });
+    }
+
+    private record EnhancedEpisode(Episode episode, boolean isWatched) {
+    }
+
+    private record EnhancedSeason(Season season, boolean isWatched) {
     }
 
     //endregion
