@@ -1,8 +1,9 @@
 package com.github.yoep.popcorn.ui.view.services;
 
-import com.github.yoep.popcorn.backend.media.filters.model.Season;
-import com.github.yoep.popcorn.backend.media.providers.Episode;
-import com.github.yoep.popcorn.backend.media.providers.ShowDetails;
+import com.github.yoep.popcorn.backend.lib.ipc.protobuf.Media;
+import com.github.yoep.popcorn.backend.media.Episode;
+import com.github.yoep.popcorn.backend.media.ShowDetails;
+import com.github.yoep.popcorn.backend.media.Season;
 import com.github.yoep.popcorn.backend.media.watched.WatchedService;
 import com.github.yoep.popcorn.backend.utils.LocaleText;
 import com.github.yoep.popcorn.ui.messages.DetailsMessage;
@@ -14,6 +15,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
+import java.util.concurrent.CompletableFuture;
 
 import static java.util.Arrays.asList;
 import static org.junit.jupiter.api.Assertions.*;
@@ -37,8 +39,9 @@ class ShowHelperServiceTest {
 
         @Test
         void testGetSeasons_whenMediaHas3Season_shouldReturn3Seasons() {
-            var media = mock(ShowDetails.class);
-            when(media.getNumberOfSeasons()).thenReturn(3);
+            var media = new ShowDetails(Media.ShowDetails.newBuilder()
+                    .setNumberOfSeasons(3)
+                    .build());
 
             var result = ShowHelperService.getSeasons(media);
 
@@ -48,8 +51,9 @@ class ShowHelperServiceTest {
 
         @Test
         void testGetSeasons_whenInvoked_shouldRequestLocaleTextToDisplay() {
-            var media = mock(ShowDetails.class);
-            when(media.getNumberOfSeasons()).thenReturn(1);
+            var media = new ShowDetails(Media.ShowDetails.newBuilder()
+                    .setNumberOfSeasons(1)
+                    .build());
 
             ShowHelperService.getSeasons(media);
 
@@ -76,20 +80,22 @@ class ShowHelperServiceTest {
         void testGetSeasonEpisodes_whenInvoked_shouldOnlyReturnsEpisodesFromSeason() {
             var seasonNumber = 1;
             var season = new Season(seasonNumber, "season-display-text");
-            var episodeFromSeason = Episode.builder()
-                    .season(seasonNumber)
-                    .build();
-            var episodeOfAnotherSeason = Episode.builder()
-                    .season(2)
-                    .build();
-            var media = mock(ShowDetails.class);
-            when(media.getEpisodes()).thenReturn(asList(episodeFromSeason, episodeOfAnotherSeason));
+            var episodeFromSeason = new Episode(Media.Episode.newBuilder()
+                    .setSeason(seasonNumber)
+                    .build());
+            var episodeOfAnotherSeason = new Episode(Media.Episode.newBuilder()
+                    .setSeason(2)
+                    .build());
+            var media = new ShowDetails(Media.ShowDetails.newBuilder()
+                    .addEpisodes(episodeFromSeason.proto())
+                    .addEpisodes(episodeOfAnotherSeason.proto())
+                    .build());
 
             var result = ShowHelperService.getSeasonEpisodes(season, media);
 
             assertNotNull(result);
             assertEquals(1, result.size());
-            assertEquals(episodeFromSeason, result.get(0));
+            assertEquals(episodeFromSeason, result.getFirst());
         }
     }
 
@@ -100,13 +106,14 @@ class ShowHelperServiceTest {
             var seasonNumber = 1;
             var season = new Season(seasonNumber, "season");
             var seasons = Collections.singletonList(season);
-            var episode = Episode.builder()
-                    .season(seasonNumber)
-                    .build();
+            var episode = new Episode(Media.Episode.newBuilder()
+                    .setSeason(seasonNumber)
+                    .build());
             var media = mock(ShowDetails.class);
+            when(watchedService.isWatched(isA(com.github.yoep.popcorn.backend.media.Media.class))).thenReturn(CompletableFuture.completedFuture(false));
             when(media.getEpisodes()).thenReturn(Collections.singletonList(episode));
 
-            ShowHelperService.getUnwatchedSeason(seasons, media);
+            ShowHelperService.getUnwatchedSeason(seasons, media).resultNow();
 
             verify(watchedService).isWatched(episode);
         }
@@ -117,16 +124,32 @@ class ShowHelperServiceTest {
             var season2 = new Season(2, "season-2");
             var season3 = new Season(3, "season-3");
             var seasons = asList(season1, season2, season3);
-            var episodeFromSeason2 = Episode.builder()
-                    .season(2)
-                    .build();
-            var episodeFromSeason3 = Episode.builder()
-                    .season(3)
-                    .build();
-            var media = mock(ShowDetails.class);
-            when(media.getEpisodes()).thenReturn(asList(episodeFromSeason2, episodeFromSeason3));
+            var media = new ShowDetails(Media.ShowDetails.newBuilder()
+                    .setNumberOfSeasons(3)
+                    .addEpisodes(Media.Episode.newBuilder()
+                            .setSeason(1)
+                            .setEpisode(1)
+                            .build())
+                    .addEpisodes(Media.Episode.newBuilder()
+                            .setSeason(1)
+                            .setEpisode(2)
+                            .build())
+                    .addEpisodes(Media.Episode.newBuilder()
+                            .setSeason(2)
+                            .setEpisode(1)
+                            .build())
+                    .addEpisodes(Media.Episode.newBuilder()
+                            .setSeason(3)
+                            .setEpisode(1)
+                            .build())
+                    .build());
+            when(watchedService.isWatched(isA(com.github.yoep.popcorn.backend.media.Media.class))).thenAnswer(invocations -> {
+                var episode = invocations.getArgument(0, Episode.class);
+                // return season 1 and 3 episodes as watched
+                return CompletableFuture.completedFuture(episode.season() == 1 || episode.season() == 3);
+            });
 
-            var result = ShowHelperService.getUnwatchedSeason(seasons, media);
+            var result = ShowHelperService.getUnwatchedSeason(seasons, media).resultNow();
 
             assertEquals(season2, result);
         }
@@ -136,10 +159,23 @@ class ShowHelperServiceTest {
             var season1 = new Season(1, "season-1");
             var season2 = new Season(2, "season-2");
             var seasons = asList(season1, season2);
-            var media = mock(ShowDetails.class);
-            when(media.getEpisodes()).thenReturn(Collections.emptyList());
+            var media = new ShowDetails(Media.ShowDetails.newBuilder()
+                    .addEpisodes(Media.Episode.newBuilder()
+                            .setSeason(1)
+                            .setEpisode(1)
+                            .build())
+                    .addEpisodes(Media.Episode.newBuilder()
+                            .setSeason(2)
+                            .setEpisode(1)
+                            .build())
+                    .addEpisodes(Media.Episode.newBuilder()
+                            .setSeason(2)
+                            .setEpisode(2)
+                            .build())
+                    .build());
+            when(watchedService.isWatched(isA(com.github.yoep.popcorn.backend.media.Media.class))).thenReturn(CompletableFuture.completedFuture(true));
 
-            var result = ShowHelperService.getUnwatchedSeason(seasons, media);
+            var result = ShowHelperService.getUnwatchedSeason(seasons, media).resultNow();
 
             assertEquals(season2, result);
         }
